package com.kzh.dao;

import com.kzh.entity.Users;
import com.kzh.general.GeneralDAO;
import org.springframework.stereotype.Repository;

@Repository
public interface UsersMapper extends GeneralDAO<Users> {
}